@@ -2,14 +2,12 @@ package MIDI::Util;
 
 # ABSTRACT: MIDI Utilities
 
-our $VERSION = '0.0403';
+our $VERSION = '0.0500';
 
 use strict;
 use warnings;
 
 use MIDI;
-use MIDI::Event;
-use MIDI::Track;
 use MIDI::Simple;
 use Music::Tempo;
 
@@ -20,8 +18,6 @@ use Music::Tempo;
   my $score = MIDI::Util::setup_score( bpm => 120, etc => '...', );
 
   MIDI::Util::set_chan_patch( $score, 0, 1 );
-
-  my $track = MIDI::Util::new_track( channel => 0, patch => 1, tempo => 450_000 );
 
   my $dump = MIDI::Util::dump('volume');
 
@@ -85,43 +81,6 @@ sub setup_score {
     $score->patch_change( $args{channel}, $args{patch} );
 
     return $score;
-}
-
-=head2 new_track
-
-  $track = MIDI::Util::new_track;  # Use defaults
-
-  $track = MIDI::Util::new_track(  # Override defaults
-    channel => $channel,
-    patch   => $patch,
-    tempo   => $tempo,
-  );
-
-Set the B<channel>, B<patch>, and B<tempo> and return a L<MIDI::Track>
-object.
-
-Named parameters and defaults:
-
-  channel: 0
-  patch:   0
-  tempo:   500000
-
-=cut
-
-sub new_track {
-    my %args = (
-        channel => 0,
-        patch   => 0,
-        tempo   => 500000,
-        @_,
-    );
-
-    my $track = MIDI::Track->new;
-
-    $track->new_event( 'set_tempo', 0, $args{tempo} );
-    $track->new_event( 'patch_change', 0, $args{channel}, $args{patch} );
-
-    return $track;
 }
 
 =head2 set_chan_patch
